# Project

./: README.md
CMake_Client_build/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  Client.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
CMake_Client_build/Client/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  UDP_Client.sln  UDP_Client.vcxproj  UDP_Client.vcxproj.filters  cmake_install.cmake  moc_mainwindow.cpp  moc_mainwindow.cpp_parameters  ui_mainwindow.h
CMake_Client_src/: CMakeLists.txt
CMake_Client_src/Client/: CMakeLists.txt  UDP_Client.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
CMake_Server_build/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  Server.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
CMake_Server_build/Server/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  UDP_Server.sln  UDP_Server.vcxproj  UDP_Server.vcxproj.filters  cmake_install.cmake  moc_mainwindow.cpp  moc_mainwindow.cpp_parameters  moc_myThread.cpp_parameters  ui_mainwindow.h
CMake_Server_src/: CMakeLists.txt
CMake_Server_src/Server/: CMakeLists.txt  UDP_Server.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
